--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "api-gen": "ng-openapi-gen -c ./ng-openapi-gen.json"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@microsoft/signalr": "^8.0.7",
+    "ng-openapi-gen": "^0.51.0",
     "pixi.js": "^8.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
