--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@microsoft/signalr": "^8.0.7",
+    "@pixi/ui": "^2.1.5",
     "ng-openapi-gen": "^0.51.0",
     "pixi.js": "^8.3.4",
     "rxjs": "~7.8.0",
